Add littles things

--- a/rent.html
+++ b/rent.html
@@ -36,11 +36,11 @@
             </div>
         </div>
         <!-- zone globale -->
-        <div class="zone0" style="background-color: aqua;">
+        <div class="zone0">
             <!-- zone Recherche + zone gauche -->
             <div class="zone1">
                 <!-- bloque recherche -->
-                <form style="background-color:blue;">
+                <form>
                     <div>
                         <label>Lieu :</label>
                         <input type="text" placeholder="Adresse, département, région, etc...">
@@ -54,13 +54,13 @@
                         <button type="button">Recherche</button>
                     </div>
                 </form>
-                <div class="zone3" style="background-color:blueviolet;">
+                <div class="zone3">
                     <!--bloque image gauche-->
                     <div class="zone4">
                         <img src="./asset/images/rent/saint-junien-rue.jpg" alt="">
                     </div>
                     <!--bloque image + texte au-dessus -->
-                        <div  class="zone5" style="background-color:rgb(189, 226, 43);">
+                        <div  class="zone5">
                             <div class="zone6">
                                 <h2>Informations sur les services</h2>
                                 <p>
@@ -80,8 +80,8 @@
                 </div>
             </div>
             <!-- zone droite + image -->
-            <div  class="zone2" style="background-color:rgb(226, 43, 46);">
-                <div class="zone8" style="background-color:rgb(226, 43, 198);">
+            <div  class="zone2">
+                <div class="zone8">
                     <img class="pict" src="./asset/images/rent/agent-immobilier-visite.jpg" alt="">
                 </div>
                 <div class="zone9">
