--- a/rent.html
+++ b/rent.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header class="flex justify-content align-item">    
-        <img class="logo" src="./asset/images/logo x150.png" alt="logo">
+        <a href="index.html"><img class="logo" src="./asset/images/logo x150.png" alt="logo"></a>
         <nav>
             <ul class="menu flex justify-content">
                 <li><a class="title-txt" href="buy.html">Acheter</a></li>
@@ -29,7 +29,7 @@
     <main>
         <div>
             <div>
-                <picture class="backpict"><img src="./asset/images/rent/picture-title.jpg" alt=""></picture>
+                <picture class="backpict"><img src="./asset/images/rent/picture-title.jpg" alt="Maquette de maison sur l'herbe"></picture>
             </div>
             <div class="title-search">
                 <h1>Chercher et trouver une location</h1>
@@ -64,7 +64,7 @@
                 <div class="zone3">
                     <!--bloque image gauche-->
                     <div class="zone4">
-                        <img src="./asset/images/rent/saint-junien-rue.jpg" alt="">
+                        <img src="./asset/images/rent/saint-junien-rue.jpg" alt="Une rue dans Saint Junien">
                     </div>
                     <!--bloque image + texte au-dessus -->
                         <div  class="zone5">
@@ -82,14 +82,14 @@
                                     Odio libero suscipit tempore eum consequatur rem in inventore. Aspernatur officia autem temporibus nostrum architecto fuga. Dolor expedita possimus recusandae culpa veniam. Numquam sit quisquam deserunt et doloremque.
                                 </p>
                             </div>
-                            <div class="zone7"><img class="pict" src="./asset/images/rent/maison.jpg" alt=""></div>
+                            <div class="zone7"><img class="pict" src="./asset/images/rent/maison.jpg" alt="Une maison"></div>
                         </div>
                 </div>
             </div>
             <!-- zone droite + image -->
             <div  class="zone2">
                 <div class="zone8">
-                    <img class="pict" src="./asset/images/rent/agent-immobilier-visite.jpg" alt="">
+                    <img class="pict" src="./asset/images/rent/agent-immobilier-visite.jpg" alt="Agent immobilier faisant visiter un appartement">
                 </div>
                 <div class="zone9">
                     <h2>Liens utiles</h2>
