--- a/rent.html
+++ b/rent.html
@@ -116,7 +116,7 @@
 
                 <ul class="social-media">
                     <li><i  id="fb" class="fa-brands fa-facebook"></i></li>
-                    <li><i  id="tw" class="fa-brands fa-twitter"></i></li>
+                    <li><i  id="tw" class="fa-brands fa-x-twitter"></i></li>
                     <li><i  id="insta" class="fa-brands fa-instagram"></i></li>
                 </ul>
             </div>
