--- a/index.html
+++ b/index.html
@@ -41,43 +41,44 @@
 
 </header>
 
+<main>
 <!-- bannière avec fonction recherche -->
-    <div class="banner">
-            <div class="search">
-                    <div class="menu_search">
-                            <div class="size_form">
-                                <select class="menu_search_deco size_search">
-                                    <option label="">Je cherche ...</option>
-                                    <option value="vente">Vente</option>
-                                    <option value="location">Location</option>
-                                </select>
-                            </div>
-                            <div class="size_form">
-                                <div class="input_icon">
-                                    <input class="menu_search_deco size_search input_icon_search" type="text" placeholder="Localisation..."  />
-                                    <i class="fa-solid fa-magnifying-glass"></i> 
-                                </div>
-                            </div>
-                            <div class="size_form">
-                                <select class="menu_search_deco size_search">
-                                    <option label="">Type de biens ...</option>
-                                    <option value="appartement">Appartement</option>
-                                    <option value="maison">Maison</option>
-                                    <option value="terrain">Terrain</option>
-                                    <option value="autre">Autre</option>
-                                </select>
-                            </div>
-                            <div class="size_form">
-                                <input class="menu_search_deco size_search" type="text" placeholder="Prix maximum..."  /> 
-                            </div>
-                            <div class="size_form">
-                                <div class="search_btn">
-                                    <a href="#"><button class="menu_search_deco size_search">Rechercher...</button></a>
-                                </div>
-                            </div>
+    <section class="banner">
+        <div class="search">
+            <div class="menu_search">
+                <div class="size_form">
+                    <select class="menu_search_deco size_search">
+                        <option label="">Je cherche ...</option>
+                        <option value="vente">Vente</option>
+                        <option value="location">Location</option>
+                    </select>
+                </div>
+                <div class="size_form">
+                    <div class="input_icon">
+                        <input class="menu_search_deco size_search input_icon_search" type="text" placeholder="Localisation..."  />
+                        <i class="fa-solid fa-magnifying-glass"></i> 
                     </div>
+                </div>
+                <div class="size_form">
+                    <select class="menu_search_deco size_search">
+                        <option label="">Type de biens ...</option>
+                        <option value="appartement">Appartement</option>
+                        <option value="maison">Maison</option>
+                        <option value="terrain">Terrain</option>
+                        <option value="autre">Autre</option>
+                    </select>
+                </div>
+                <div class="size_form">
+                    <input class="menu_search_deco size_search" type="text" placeholder="Prix maximum..."  /> 
+                </div>
+                <div class="size_form">
+                    <div class="search_btn">
+                        <a href="#"><button class="menu_search_deco size_search">Rechercher...</button></a>
+                    </div>
+                </div>
             </div>
-    </div>
+        </div>
+    </section>
     
 <!-- section actualités -->
         <section>
@@ -201,55 +202,58 @@
                 </div>
             </div>
         </section>
+</main>
 
-    </body>
+</body>
 
 <!-- footer -->
-    <footer class="footer">
-        <div class="column1">
-            <a href="index.html">
-                <img src="asset/images/logo_white_150.png" alt="logo acgdimmo" width="150" height="73">
-            </a>
-            <p>Retouvez-nous sur les réseaux sociaux</p>
-            <div  class="section_social_media">
-                <span class="social_media"><a href="#"><i class="fa-brands fa-square-facebook"></i></a></span>
-                <span class="social_media"><a href="#"><i class="fa-brands fa-square-twitter"></i></a></span>
-                <span class="social_media"><a href="#"><i class="fa-brands fa-square-instagram"></i></a></span>
-            </div>
+<footer class="footer">
+    <div class="column1">
+        <a href="index.html">
+            <img src="asset/images/logo_white_150.png" alt="logo acgdimmo" width="150" height="73">
+        </a>
+        <p>Retouvez-nous sur les réseaux sociaux</p>
+        <div  class="section_social_media">
+            <span class="social_media"><a href="#"><i class="fa-brands fa-square-facebook"></i></a></span>
+            <span class="social_media"><a href="#"><i class="fa-brands fa-square-twitter"></i></a></span>
+            <span class="social_media"><a href="#"><i class="fa-brands fa-square-instagram"></i></a></span>
         </div>
-
-        <div class="column2">
-            <ul>
-                <li class="menu_footer">Services</li>
-                <li><a href="#">Achat</a></li>
-                <li><a href="#">Vendre</a></li>
-                <li><a href="#">Louer</a></li>
-            </ul>
-        </div>
-
-        <div class="column3">
-            <ul>
-                <li class="menu_footer">Accès rapide</li>
-                <li><a href="newsletter registration.html">Newsletter</a></li>
-                <li><a href="aboutus.html">Qui sommes-nous ?</a></li>
-                <li><a href="offers.html">Nos offres d'emploi</a></li>
-                <li><a href="customer-feedback.html">Avis client</a></li>
-                <li><a href="sitemap.html">Plan du site</a></li>
-            </ul>
-        </div>
-
-        <div class="column4">
-            <ul>
-                <li class="menu_footer">Contact</li>
-                <li><i class="fa-solid fa-phone"></i><span>07 06 05 04 03</span></li>
-                <li><i class="fa-solid fa-at"></i><span>contact@acgdimmo.fr</span></li>
-                <li><i class="fa-solid fa-location-dot"></i><span>Saint-Junien</span></li>
-            </ul>
-        </div>
-    </footer>
-
-    <div class="copyright">
-        <p>copyright <i class="fa-regular fa-copyright"></i> acgd immo</p>
     </div>
+
+    <div class="column2">
+        <ul>
+            <li class="menu_footer">Services</li>
+            <li><a href="#">Achat</a></li>
+            <li><a href="#">Vendre</a></li>
+            <li><a href="#">Louer</a></li>
+        </ul>
+    </div>
+
+    <div class="column3">
+        <ul>
+            <li class="menu_footer">Accès rapide</li>
+            <li><a href="newsletter registration.html">Newsletter</a></li>
+            <li><a href="aboutus.html">Qui sommes-nous ?</a></li>
+            <li><a href="offers.html">Nos offres d'emploi</a></li>
+            <li><a href="customer-feedback.html">Avis client</a></li>
+            <li><a href="sitemap.html">Plan du site</a></li>
+        </ul>
+    </div>
+
+    <div class="column4">
+        <ul>
+            <li class="menu_footer">Contact</li>
+            <li><i class="fa-solid fa-phone"></i><span>07 06 05 04 03</span></li>
+            <li><i class="fa-solid fa-at"></i><span>contact@acgdimmo.fr</span></li>
+            <li><i class="fa-solid fa-location-dot"></i><span>Saint-Junien</span></li>
+        </ul>
+    </div>
+</footer>
+
+<footer role="contentinfo">
+<div class="copyright">
+    <p>copyright <i class="fa-regular fa-copyright"></i> acgd immo</p>
+</div>
+</footer>
 
 </html>
