--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
             <li><a class="activ" href="index.html">Accueil</a></li>
             <li><a class="activ" href="buy.html">Acheter</a></li>
             <li><a class="activ" href="rent.html">Louer</a></li>
-            <li><a class="activ"href="sell.html">Vendre</a></li>
-            <li><a class="activ" href="login.html">Contact</a></li>
+            <li><a class="activ"href="sell.ht">Vendre</a></li>
+            <li><a class="activ" href="user.html">Contact</a></li>
         </ul>         
     </nav>
 
@@ -81,130 +81,126 @@
     </section>
     
 <!-- section actualités -->
-        <section>
-            <div class="news">
-                <h1>Les actualités de l'immobilier</h1>
-                <div class="news_slide">
-                    <div class="size_flex">
-                        <div class="news_1"><a class="activ_news" href="#">Lorem ipsum first</a></div>
-                    </div>
-                    <div class="size_flex">
-                        <div class="news_2"><a class="activ_news" href="#">Lorem ipsum second</a></div>
-                    </div>
-                    <div class="size_flex">
-                        <div class="news_3"><a class="activ_news" href="#">Lorem ipsum third</a></div>
-                    </div>
-                    <div class="size_flex">
-                        <div class="news_all">
-                            <a class="activ_news_all" href="#"><span>Toutes nos actualités</span></a>
-                            <div>
-                                <a class="activ_news_all_btn" href="#"><span>&rsaquo;</span></a>
-                            </div>
+    <section>
+        <div class="news">
+            <h1>Les actualités de l'immobilier</h1>
+            <div class="news_slide">
+                <div class="size_flex">
+                    <div class="news_1"><a class="activ_news" href="#">Lorem ipsum first</a></div>
+                </div>
+                <div class="size_flex">
+                    <div class="news_2"><a class="activ_news" href="#">Lorem ipsum second</a></div>
+                </div>
+                <div class="size_flex">
+                    <div class="news_3"><a class="activ_news" href="#">Lorem ipsum third</a></div>
+                </div>
+                <div class="size_flex">
+                    <div class="news_all">
+                        <a class="activ_news_all" href="#"><span>Toutes nos actualités</span></a>
+                        <div>
+                            <a class="activ_news_all_btn" href="#"><span>&rsaquo;</span></a>
                         </div>
                     </div>
                 </div>
-        </section>
+            </div>
+    </section>
 
 <!-- derniers biens en vente -->
-        <section>
-            <div class="sell">
-            <h1>Nos derniers biens en vente</h1>
-                <div class="sell_slide">
-                    <div class="sell_frame" id="frame_1">
-                        <p>145000€</p>
-                        <p>MAISON</p>
-                        <P>SAINT-JUNIEN</p>
-                        <a class="activ_sell" href="#"><img src="asset/images/home/bien_1.jpg" alt="bien 1 acgdimmo" width="200"></a>
-                        <div class="sell_type">
-                            <p><i class="fa-solid fa-bed"></i><span>4</span></p>
-                            <div class="vertical_row"></div>
-                            <p><i class="fa-regular fa-square"></i><span>120 m²</span></p>
-                        </div>
-                    </div>
-                    <div class="sell_frame" id="frame_2">
-                        <p>119000€</p>
-                        <p>MAISON</p>
-                        <P>SAINT-JUNIEN</p>
-                        <a class="activ_sell" href="#"><img src="asset/images/home/bien_2.jpg" alt="bien 2 acgdimmo" width="200"></a>
-                        <div class="sell_type">
-                            <p><i class="fa-solid fa-bed"></i><span>2</span></p>
-                            <div class="vertical_row"></div>
-                            <p><i class="fa-regular fa-square"></i><span>90.3 m²</span></p>
-                        </div>
-                    </div>
-                    <div class="sell_frame" id="frame_3">
-                        <p>139000€</p>
-                        <p>MAISON</p>
-                        <P>SAINT-JUNIEN</p>
-                        <a class="activ_sell" href="#"><img src="asset/images/home/bien_3.jpg" alt="bien 3 acgdimmo" width="200"></a>
-                        <div class="sell_type">
-                            <p><i class="fa-solid fa-bed"></i><span>4</span></p>
-                            <div class="vertical_row"></div>
-                            <p><i class="fa-regular fa-square"></i><span>135 m²</span></p>
-                        </div>
-                    </div>
-                    <div class="sell_frame" id="frame_4">
-                        <p>45000€</p>
-                        <p>GRANGE</p>
-                        <P>SAINT-JUNIEN</p>
-                        <a class="activ_sell" href="#"><img src="asset/images/home/bien_4.jpg" alt="bien 4 acgdimmo" width="200"></a>
-                        <div class="sell_type">
-                            <p><i class="fa-solid fa-bed"></i><span>0</span></p>
-                            <div class="vertical_row"></div>
-                            <p><i class="fa-regular fa-square"></i><span>165 m²</span></p>
-                        </div>
-                    </div>
-                </div> 
+    <section>
+        <div class="sell">
+        <h1>Nos derniers biens en vente</h1>
+        <div class="sell_slide">
+            <div class="sell_frame" id="frame_1">
+                <p>145000€</p>
+                <p>MAISON</p>
+                <P>SAINT-JUNIEN</p>
+                <a class="activ_sell" href="#"><img src="asset/images/home/bien_1.jpg" alt="bien 1 acgdimmo" width="200"></a>
+                <div class="sell_type">
+                    <p><i class="fa-solid fa-bed"></i><span>4</span></p>
+                    <div class="vertical_row"></div>
+                    <p><i class="fa-regular fa-square"></i><span>120 m²</span></p>
+                </div>
             </div>
-            <div class="navbar_sell">
-                <div>
-                    <a class="activ_news_all_btn" href="#"><span>&lsaquo;</span></a>
+            <div class="sell_frame" id="frame_2">
+                <p>119000€</p>
+                <p>MAISON</p>
+                <P>SAINT-JUNIEN</p>
+                <a class="activ_sell" href="#"><img src="asset/images/home/bien_2.jpg" alt="bien 2 acgdimmo" width="200"></a>
+                <div class="sell_type">
+                    <p><i class="fa-solid fa-bed"></i><span>2</span></p>
+                    <div class="vertical_row"></div>
+                    <p><i class="fa-regular fa-square"></i><span>90.3 m²</span></p>
                 </div>
-                <div>
-                <ul >
-                    <li class="navbar_sell_min_btn"></li>
-                    <li class="navbar_sell_min_btn"></li>
-                    <li class="navbar_sell_min_btn"></li>
-                </ul>
-                </div>
-                <div>
-                    <a class="activ_news_all_btn" href="#"><span>&rsaquo;</span></a>
-                </div>
-
-
             </div>
-        </section>
+            <div class="sell_frame" id="frame_3">
+                <p>139000€</p>
+                <p>MAISON</p>
+                <P>SAINT-JUNIEN</p>
+                <a class="activ_sell" href="#"><img src="asset/images/home/bien_3.jpg" alt="bien 3 acgdimmo" width="200"></a>
+                <div class="sell_type">
+                    <p><i class="fa-solid fa-bed"></i><span>4</span></p>
+                    <div class="vertical_row"></div>
+                    <p><i class="fa-regular fa-square"></i><span>135 m²</span></p>
+                </div>
+            </div>
+                <div class="sell_frame" id="frame_4">
+                    <p>45000€</p>
+                    <p>GRANGE</p>
+                    <P>SAINT-JUNIEN</p>
+                    <a class="activ_sell" href="#"><img src="asset/images/home/bien_4.jpg" alt="bien 4 acgdimmo" width="200"></a>
+                    <div class="sell_type">
+                        <p><i class="fa-solid fa-bed"></i><span>0</span></p>
+                        <div class="vertical_row"></div>
+                        <p><i class="fa-regular fa-square"></i><span>165 m²</span></p>
+                    </div>
+                </div>
+            </div> 
+        </div>
+        <div class="navbar_sell">
+            <div>
+                <a class="activ_news_all_btn" href="#"><span>&lsaquo;</span></a>
+            </div>
+            <div>
+            <ul >
+                <li class="navbar_sell_min_btn"></li>
+                <li class="navbar_sell_min_btn"></li>
+                <li class="navbar_sell_min_btn"></li>
+            </ul>
+            </div>
+            <div>
+                <a class="activ_news_all_btn" href="#"><span>&rsaquo;</span></a>
+            </div>
+        </div>
+    </section>
 
 <!-- section avis clients -->
-        <section class="customers">
-            <p>Avis clients</p>
-            <p><span>Ce que nos clients pensent de notre travail !</span></p>
-            <button><a href="customer-feedback.html">Lire les témoignages</a></button>
-        </section>
+    <section class="customers">
+        <h2>Avis clients</h2>
+        <p>Ce que nos clients pensent de notre travail</p>
+        <div class="button"><a href="customer-feedback.html">Lire les témoignages</a></div>
+    </section>
 
 <!-- section article agence -->
-        <section class="agency">
-            <div class="bkg_agency">
-                <h1>Votre agence ACGD IMMO en Limousin</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p></br>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-                <div class="center_button">
-                    <div class="button_contact">
-                        <button><a href="estimate.html">Estimons votre bien</a></button>
-                    </div>
-                    <div class="button_estimate">
-                        <button><a href="to_manage.html">Gérons votre bien</a></button>
-                    </div>
+    <section class="agency">
+        <div class="bkg_agency">
+            <h1>Votre agence ACGD IMMO en Limousin</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p></br>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+            <div class="center_button">
+                <div class="button_contact">
+                    <div class="button"><a href="estimate.html">Estimons votre bien</a></div>
+                </div>
+                <div class="button_estimate">
+                    <div class="button"><a href="to_manage.html">Gérons votre bien</a></div>
                 </div>
             </div>
-        </section>
+        </div>
+    </section>
 </main>
-
-</body>
 
 <!-- footer -->
 <footer class="footer">
@@ -253,5 +249,7 @@
 <div class="copyright">
     <p>copyright <i class="fa-regular fa-copyright"></i> acgd immo</p>
 </div>
+
+</body>
 
 </html>
