--- a/index.html
+++ b/index.html
@@ -250,6 +250,7 @@
     <p>copyright <i class="fa-regular fa-copyright"></i> acgd immo</p>
 </div>
 
+<script src="./asset/js/index.js"></script>
 </body>
 
 </html>
