--- a/offers.html
+++ b/offers.html
@@ -102,7 +102,8 @@
                         <div class="logo-form2"> <i class="fa-solid fa-location-dot"></i> <input id="form" type="text"
                                 placeholder="Où"> </div>
                     </form>
-                    <div class="responsive-research"> <input id="research" type="submit" value="Rechercher"> </div>
+                    <div class="responsive-research"> <i class="fa-solid fa-magnifying-glass"></i><input id="research"
+                            type="submit" value="Rechercher"> </div>
                 </div>
                 <div class="desktop-form-contract"> <select name="contract" id="form2">
                         <option value="Contrat">Contrats</option>
