--- a/index.html
+++ b/index.html
@@ -191,10 +191,10 @@
             <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
             <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
             <div class="center_button">
-                <div class="button_contact">
+                <div class="button_estimate">
                     <div class="button"><a href="estimate.html">Estimons votre bien</a></div>
                 </div>
-                <div class="button_estimate">
+                <div class="button_manage">
                     <div class="button"><a href="to_manage.html">Gérons votre bien</a></div>
                 </div>
             </div>
