--- a/contact.html
+++ b/contact.html
@@ -32,6 +32,7 @@
 
 <main>
     <div class="background-picture">
+        <div class="wallpaper"></div>
         <section class="page-title">
             <article class="contact">
                 <h1>NOUS CONTACTER</h1>
@@ -118,7 +119,7 @@
             </article>
         </section>
 
-        <p class="champs">* champs obligatoires</p>
+        <p class="fields">* champs obligatoires</p>
     </div>
 </main>
 
