--- a/rent.html
+++ b/rent.html
@@ -58,7 +58,7 @@
                             <option value="departement">Département</option>
                             <option value="region">Région</option>
                         </select>
-                        <button type="button">Recherche</button>
+                        <button type="submit">Recherche</button>
                     </div>
                 </form>
                 <div class="zone3">
