main bientot fini

--- a/authentification.html
+++ b/authentification.html
@@ -29,6 +29,15 @@
         <p class="form_container_heading">MON ESPACE</p>
         <input class="form_container_inputs" type="email" placeholder="email@gmail.com">
         <input class="form_container_inputs" type="password" placeholder="*****">
+    <div class="chekbox authentication"> 
+        
+        <div>
+            <input type="checkbox">
+            <p>mémoriser</p>
+        </div>
+        <p>mot de passe oublié ?</p>
+    </div>
+        
         <button class="form_container_button">CONNEXION</button>
         <P>Vous n'avez pas de compte? <a href="">Créer un compte!</a></P>
     </form>
