--- a/estimate.html
+++ b/estimate.html
@@ -6,7 +6,6 @@
     <title>Estimer</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link rel="stylesheet" href="asset/css/estimate.css">
-    <link rel="stylesheet" href="./asset/css/header-footer.css">
 
 </head>
 <body>
@@ -63,7 +62,7 @@
         <h5>Adresse :</h5>
 
         <div class="adresse">
-            <input type="Adresse" placeholder="   Ex: 121 Rue des Fleurs 87000 Limoges" style="width: 500px; height: 40px;">
+            <input type="Adresse" placeholder="   Ex: 121 Rue des Fleurs 87000 Limoges">
         </div>
         <button class="valider">
             <a href="#">Valider</a>
