--- a/authentification.html
+++ b/authentification.html
@@ -1,27 +1,32 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="asset/css/authentification.css">
     <title>authentication</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+    <link rel="stylesheet" href="./asset/css/header-footer.css">
+
 </head>
-<!--haeder création-->
-</body>
-    <header>
-        <img class="logoacgd" src="asset/images/logo x150.png" alt="logoacgd">
+<body>
+    <header class="flex justify-content align-item">    
+        <a href="index.html"><img class="logo" src="./asset/images/logo x150.png" alt="logo"></a>
+        <input type="checkbox" id="check">
+            <label for="check" class="checkbtn">
+                <i class="fas fa-bars"></i>
+            </label>
         <nav>
-            <ul>
-                <li><a href="buy.html">acheter</a></li>
-                <li><a href="rent.html">louer</a></li>
-                <li><a href="sell.html">vendre</a></li>
-                <li><a href="contact.html">contact</a></li>
-            </ul>
+            <ul class="menu flex justify-content">
+                <li><a class="title-txt" href="buy.html">Acheter</a></li>
+                <li><a class="title-txt" href="rent.html">Louer</a></li>
+                <li><a class="title-txt" href="sell.html">Vendre</a></li>
+                <li><a class="title-txt" href="contact.html">Contact</a></li>
+            </ul>            
         </nav>
-        <button>
-            <a href="">me connecter</a>
-        </button>
-    </header>*
+        <div class="logo-mon-compte">
+            <a class="active" href="#Mon compte"><i class="fa-solid fa-user"></i> Mon compte</a>
+        </div>
+    </header>
 
 </body>
 <main>
