fix errors of w3c validator

--- a/sell.html
+++ b/sell.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer">
     <link rel="stylesheet" href="asset/css/sell.css">
     <title>Page de vente</title>
 </head>
@@ -23,7 +23,7 @@
             </ul>
         </nav>
         <div class="logo-mon-compte">
-            <a class="active" href="#Mon compte"><i class="fa-solid fa-user"></i> Mon compte</a>
+            <a class="active" href="#Mon_compte"><i class="fa-solid fa-user"></i> Mon compte</a>
         </div>
     </header>
 
@@ -44,7 +44,7 @@
                     <p class="content-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
                 </div>
                 <button class="info-button" type="button">
-                    <h2>Conseils</h2>
+                    <strong>Conseils</strong>
                 </button>
             </article>
     
@@ -55,7 +55,7 @@
                     <p class="content-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
                 </div>
                 <button class="info-button" type="button">
-                    <h2>Contactez-nous</h2>
+                    <strong>Contactez-nous</strong>
                 </button>
             </article>
         </section>
@@ -93,7 +93,7 @@
                     <h2>Accès rapide</h2>
 
                     <ul class="flex">
-                        <li><a href="newsletter registration.html">Inscription newsletter</a></li>
+                        <li><a href="newsletter_registration.html">Inscription newsletter</a></li>
                         <li><a href="aboutus.html">Qui sommes-nous ?</a></li>
                         <li><a href="offers.html">Nos offres d'emploi</a></li>
                         <li><a href="customer-feedback.html">Avis client</a></li>
@@ -105,7 +105,7 @@
 
                     <ul class="flex">
                         <li><a href="tel:06.08.16.45.22">06.08.16.45.22</a></li>
-                        <li><a href="mailto:contact@acgdimmo.fr">contact@acgdimmo.fr</li></a>
+                        <li><a href="mailto:contact@acgdimmo.fr">contact@acgdimmo.fr</a></li>
                         <li><a target="_blank" href="https://www.google.fr/maps/place/87200+Saint-Junien/@45.8964635,0.802924,12z/data=!3m1!4b1!4m6!3m5!1s0x47feeadaef87b0c9:0x8b265b0dc126d53e!8m2!3d45.88716!4d0.901165!16zL20vMDh6Xzkz?entry=ttu">Saint-Junien</a></li>
                     </ul>
                 </div>
