--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/724458d0e8.js" crossorigin="anonymous"></script>
+    <script src="./asset/js/index.js" defer></script>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Baloo+2:wght@500&display=swap');
       </style>
@@ -21,23 +22,20 @@
             <img src="asset/images/logo x150.png" alt="logo acgdimmo">
         </a>
     </div>
-    <nav>
+    <nav id="nav">
         <ul>
-            <li><a class="activ" href="index.html">Accueil</a></li>
-            <li><a class="activ" href="buy.html">Acheter</a></li>
-            <li><a class="activ" href="rent.html">Louer</a></li>
-            <li><a class="activ"href="sell.ht">Vendre</a></li>
-            <li><a class="activ" href="user.html">Contact</a></li>
-        </ul>         
+            <li><a href="index.html">Accueil</a></li>
+            <li><a href="buy.html">Acheter</a></li>
+            <li><a href="rent.html">Louer</a></li>
+            <li><a href="sell.html">Vendre</a></li>
+            <li><a href="user.html">Contact</a></li>
+        </ul>
+        <div id="menu_burger"></div>         
     </nav>
 
     <div class="auth"> 
         <li><a href="#"><i class="fa-regular fa-user"></i>Mon compte</a></li>
     </div>
-    
-    <div class="menu_burger">
-        <i class="fa-solid fa-bars"></i>
-    </div>   
 
 </header>
 
@@ -250,7 +248,6 @@
     <p>copyright <i class="fa-regular fa-copyright"></i> acgd immo</p>
 </div>
 
-<script src="./asset/js/index.js"></script>
 </body>
 
 </html>
