--- a/aboutus.html
+++ b/aboutus.html
@@ -26,6 +26,7 @@
                 <li><a class="title-txt" href="rent.html">Louer</a></li>
                 <li><a class="title-txt" href="sell.html">Vendre</a></li>
                 <li><a class="title-txt" href="contact.html">Contact</a></li>
+                <li id="moncompte"><a class="active" href="#Mon compte"><i class="fa-solid fa-user"></i> Mon compte</a></li>
             </ul>
         </nav>
         <div class="logo-mon-compte">
