--- a/contact.html
+++ b/contact.html
@@ -175,6 +175,7 @@
 </footer>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/js/all.min.js"></script>
+<script src="asset/js/contact.js"></script>
 </body>
 
 </html>
