Correction du css pour le burger

--- a/rent.html
+++ b/rent.html
@@ -23,7 +23,7 @@
             <a class="active" href="to_manage.html"><i class="fa-solid fa-user"></i>Mon compte</a>
         </div>
         <div class="logo-alter">
-            <button id="burger" onclick="ouvre();" class="botonburger"><a href="#"><i class="fa-solid fa-bars"></i></a></button>
+            <input type="button" id="zebouton" value="">
         </div>
     </header>
     <main>
