--- a/rent.html
+++ b/rent.html
@@ -6,7 +6,7 @@
     <title>Location</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link rel="stylesheet" href="./asset/css/rent.css">
-    <script src="./asset/js/rent.js"></script>
+    <script src="./asset/js/rent.js" defer></script>
 </head>
 <body>
     <header class="flex justify-content align-item">    
@@ -23,7 +23,7 @@
             <a class="active" href="to_manage.html"><i class="fa-solid fa-user"></i>Mon compte</a>
         </div>
         <div class="logo-alter">
-            <input type="button" id="zebouton" value="">
+            <input type="button" id="burger" value="">
         </div>
     </header>
     <main>
