--- a/rent.html
+++ b/rent.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,8 +11,8 @@
 <body>
     <header class="flex justify-content align-item">    
         <a href="index.html"><img class="logo" src="./asset/images/logo x150.png" alt="logo"></a>
-        <nav id="zemenu">
-            <ul class="menu flex justify-content">
+        <nav>
+            <ul id="zemenu" class="menu flex justify-content">
                 <li><a class="title-txt" href="buy.html">Acheter</a></li>
                 <li><a class="title-txt" href="rent.html">Louer</a></li>
                 <li><a class="title-txt" href="sell.html">Vendre</a></li>
