--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <script src="https://kit.fontawesome.com/724458d0e8.js" crossorigin="anonymous"></script>
     <script src="./asset/js/index.js" defer></script>
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Baloo+2:wght@500&display=swap');
-      </style>
-      <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto">
+    @import url('https://fonts.googleapis.com/css2?family=Baloo+2:wght@500&display=swap');
+    </style>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto">
     <title>Accueil</title>
     <link rel="stylesheet" href="./asset/css/index.css">
 </head>
@@ -29,6 +30,7 @@
             <li><a href="rent.html">Louer</a></li>
             <li><a href="sell.html">Vendre</a></li>
             <li><a href="user.html">Contact</a></li>
+            <li id="idcount"><a href="index.html">Se connecter</a></li>
         </ul>
         <div id="menu_burger"></div>         
     </nav>
