--- a/index.html
+++ b/index.html
@@ -45,23 +45,20 @@
 <!-- bannière avec fonction recherche -->
     <section class="banner">
         <div class="search">
-            <div class="menu_search">
+            <form id="search_form" class="menu_search">
                 <div class="size_form">
-                    <select class="menu_search_deco size_search">
-                        <option label="">Je cherche ...</option>
+                    <select id="take_search" class="menu_search_deco size_search">
+                        <option class="value_bold" value="" disabled>Je cherche ...</option>
                         <option value="vente">Vente</option>
                         <option value="location">Location</option>
                     </select>
                 </div>
-                <div class="size_form">
-                    <div class="input_icon">
-                        <input class="menu_search_deco size_search input_icon_search" type="text" placeholder="Localisation..."  />
-                        <i class="fa-solid fa-magnifying-glass"></i> 
-                    </div>
+                <div class="size_form">   
+                        <input id="take_local" class="menu_search_deco size_search" type="text" placeholder="Localisation..."  />
                 </div>
                 <div class="size_form">
-                    <select class="menu_search_deco size_search">
-                        <option label="">Type de biens ...</option>
+                    <select id="take_type" class="menu_search_deco size_search">
+                        <option class="value_bold" value="" disabled>Type de biens ...</option>
                         <option value="appartement">Appartement</option>
                         <option value="maison">Maison</option>
                         <option value="terrain">Terrain</option>
@@ -69,14 +66,14 @@
                     </select>
                 </div>
                 <div class="size_form">
-                    <input class="menu_search_deco size_search" type="text" placeholder="Prix maximum..."  /> 
+                    <input id="take_price" class="menu_search_deco size_search" type="text" placeholder="Prix maximum..."  /> 
                 </div>
                 <div class="size_form">
                     <div class="search_btn">
-                        <a href="#"><button class="menu_search_deco size_search">Rechercher...</button></a>
+                        <input type="submit" class="menu_search_deco size_search" value="Rechercher" />
                     </div>
                 </div>
-            </div>
+            </form>
         </div>
     </section>
     
