Add Js in form test error

--- a/rent.html
+++ b/rent.html
@@ -39,7 +39,7 @@
         <div class="zone0">
             <!-- zone Recherche + zone gauche -->
             <div class="zone1">
-                <!-- bloque recherche -->
+                <!-- bloc recherche -->
                 <form id="formu">
                     <div>
                         <label for="localization">Lieu :</label>
