--- a/contact.html
+++ b/contact.html
@@ -73,10 +73,10 @@
             <article class="formatting">   
                 <form action="form"> 
                 <div class="subject">
-                        <label for="subjet-select">Sujet :</label>
-                        <select id="subjet-select">
+                        <label for="subject-select">Sujet :</label>
+                        <select id="subject-select">
                             <optgroup label="Particuliers">
-                                <option value="">Mon espace personnel</option>
+                                <option value="Mon espace personnel">Mon espace personnel</option>
                                 <option value="">Mon profil locataire</option>
                                 <option value="">Recherche d'un bien</option>
                                 <option value="">Vendre son bien</option>
@@ -115,7 +115,7 @@
             </article>
 
             <article class="maps">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d44427.813926552095!2d0.8441252993535505!3d45.89654548272686!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47feeadaef87b0c9%3A0x8b265b0dc126d53e!2s87200%20Saint-Junien!5e0!3m2!1sfr!2sfr!4v1705479222960!5m2!1sfr!2sfr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d44427.813926552095!2d0.8441252993535505!3d45.89654548272686!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47feeadaef87b0c9%3A0x8b265b0dc126d53e!2s87200%20Saint-Junien!5e0!3m2!1sfr!2sfr!4v1705479222960!5m2!1sfr!2sfr" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </article>
         </section>
 
