--- a/contact.html
+++ b/contact.html
@@ -77,17 +77,16 @@
                         <select id="subject-select">
                             <optgroup label="Particuliers">
                                 <option value="Mon espace personnel">Mon espace personnel</option>
-                                <option value="">Mon profil locataire</option>
-                                <option value="">Recherche d'un bien</option>
-                                <option value="">Vendre son bien</option>
-                                <option value="">L'alerte immo</option>
-                                <option value="">Données personnelles : exercer mes droits</option>
-                                <option value="">Problèmes techniques sur le site</option>
+                                <option value="Recherche d'un bien">Recherche d'un bien</option>
+                                <option value="Vendre son bien">Vendre son bien</option>
+                                <option value="L'alerte immo">L'alerte immo</option>
+                                <option value="Données personnelles : exercer mes droits">Données personnelles : exercer mes droits</option>
+                                <option value="Problèmes techniques sur le site">Problèmes techniques sur le site</option>
                             </optgroup>
                             <optgroup label="Professionnels">
-                                <option value="">Partenariat</option>
-                                <option value="">Régie publicitaire</option>
-                                <option value="">Offres commerciales</option>
+                                <option value="Partenariat">Partenariat</option>
+                                <option value="Régie publicitaire">Régie publicitaire</option>
+                                <option value="Offres commerciales">Offres commerciales</option>
                             </optgroup>
                         </select>                    
                     </div>
