--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <form id="search_form" class="menu_search">
                 <div class="size_form">
                     <select id="take_search" class="menu_search_deco size_search">
-                        <option class="value_bold" value="" disabled>Je cherche ...</option>
+                        <option class="value_bold" value="">Je cherche ...</option>
                         <option value="vente">Vente</option>
                         <option value="location">Location</option>
                     </select>
@@ -58,7 +58,7 @@
                 </div>
                 <div class="size_form">
                     <select id="take_type" class="menu_search_deco size_search">
-                        <option class="value_bold" value="" disabled>Type de biens ...</option>
+                        <option class="value_bold" value="">Type de biens ...</option>
                         <option value="appartement">Appartement</option>
                         <option value="maison">Maison</option>
                         <option value="terrain">Terrain</option>
